aws/cluster_cf.yaml
TemplateBody:
  AWSTemplateFormatVersion: 2010-09-09
  Description: >-
    EKS cluster (dedicated VPC: true, dedicated IAM: true) [created and managed
    by eksctl]
  Mappings:
    ServicePrincipalPartitionMap:
      aws:
        EC2: ec2.amazonaws.com
        EKS: eks.amazonaws.com
        EKSFargatePods: eks-fargate-pods.amazonaws.com
      aws-cn:
        EC2: ec2.amazonaws.com.cn
        EKS: eks.amazonaws.com
        EKSFargatePods: eks-fargate-pods.amazonaws.com
      aws-us-gov:
        EC2: ec2.amazonaws.com
        EKS: eks.amazonaws.com
        EKSFargatePods: eks-fargate-pods.amazonaws.com
  Resources:
    ClusterSharedNodeSecurityGroup:
      Type: 'AWS::EC2::SecurityGroup'
      Properties:
        GroupDescription: Communication between all nodes in the cluster
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/ClusterSharedNodeSecurityGroup'
        VpcId: !Ref VPC
    ControlPlane:
      Type: 'AWS::EKS::Cluster'
      Properties:
        Name: inventory-cluster
        ResourcesVpcConfig:
          SecurityGroupIds:
            - !Ref ControlPlaneSecurityGroup
          SubnetIds:
            - !Ref SubnetPublicUSWEST2D
            - !Ref SubnetPublicUSWEST2B
            - !Ref SubnetPublicUSWEST2C
            - !Ref SubnetPrivateUSWEST2D
            - !Ref SubnetPrivateUSWEST2B
            - !Ref SubnetPrivateUSWEST2C
        RoleArn: !GetAtt
          - ServiceRole
          - Arn
        Version: '1.18'
    ControlPlaneSecurityGroup:
      Type: 'AWS::EC2::SecurityGroup'
      Properties:
        GroupDescription: Communication between the control plane and worker nodegroups
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/ControlPlaneSecurityGroup'
        VpcId: !Ref VPC
    IngressDefaultClusterToNodeSG:
      Type: 'AWS::EC2::SecurityGroupIngress'
      Properties:
        Description: >-
          Allow managed and unmanaged nodes to communicate with each other (all
          ports)
        FromPort: 0
        GroupId: !Ref ClusterSharedNodeSecurityGroup
        IpProtocol: '-1'
        SourceSecurityGroupId: !GetAtt
          - ControlPlane
          - ClusterSecurityGroupId
        ToPort: 65535
    IngressInterNodeGroupSG:
      Type: 'AWS::EC2::SecurityGroupIngress'
      Properties:
        Description: Allow nodes to communicate with each other (all ports)
        FromPort: 0
        GroupId: !Ref ClusterSharedNodeSecurityGroup
        IpProtocol: '-1'
        SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
        ToPort: 65535
    IngressNodeToDefaultClusterSG:
      Type: 'AWS::EC2::SecurityGroupIngress'
      Properties:
        Description: Allow unmanaged nodes to communicate with control plane (all ports)
        FromPort: 0
        GroupId: !GetAtt
          - ControlPlane
          - ClusterSecurityGroupId
        IpProtocol: '-1'
        SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
        ToPort: 65535
    InternetGateway:
      Type: 'AWS::EC2::InternetGateway'
      Properties:
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/InternetGateway'
    NATGateway:
      Type: 'AWS::EC2::NatGateway'
      Properties:
        AllocationId: !GetAtt
          - NATIP
          - AllocationId
        SubnetId: !Ref SubnetPublicUSWEST2D
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/NATGateway'
    NATIP:
      Type: 'AWS::EC2::EIP'
      Properties:
        Domain: vpc
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/NATIP'
    NATPrivateSubnetRouteUSWEST2B:
      Type: 'AWS::EC2::Route'
      Properties:
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NATGateway
        RouteTableId: !Ref PrivateRouteTableUSWEST2B
    NATPrivateSubnetRouteUSWEST2C:
      Type: 'AWS::EC2::Route'
      Properties:
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NATGateway
        RouteTableId: !Ref PrivateRouteTableUSWEST2C
    NATPrivateSubnetRouteUSWEST2D:
      Type: 'AWS::EC2::Route'
      Properties:
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NATGateway
        RouteTableId: !Ref PrivateRouteTableUSWEST2D
    PolicyCloudWatchMetrics:
      Type: 'AWS::IAM::Policy'
      Properties:
        PolicyDocument:
          Statement:
            - Action:
                - 'cloudwatch:PutMetricData'
              Effect: Allow
              Resource: '*'
          Version: 2012-10-17
        PolicyName: !Sub '${AWS::StackName}-PolicyCloudWatchMetrics'
        Roles:
          - !Ref ServiceRole
    PolicyELBPermissions:
      Type: 'AWS::IAM::Policy'
      Properties:
        PolicyDocument:
          Statement:
            - Action:
                - 'ec2:DescribeAccountAttributes'
                - 'ec2:DescribeAddresses'
                - 'ec2:DescribeInternetGateways'
              Effect: Allow
              Resource: '*'
          Version: 2012-10-17
        PolicyName: !Sub '${AWS::StackName}-PolicyELBPermissions'
        Roles:
          - !Ref ServiceRole
    PrivateRouteTableUSWEST2B:
      Type: 'AWS::EC2::RouteTable'
      Properties:
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/PrivateRouteTableUSWEST2B'
        VpcId: !Ref VPC
    PrivateRouteTableUSWEST2C:
      Type: 'AWS::EC2::RouteTable'
      Properties:
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/PrivateRouteTableUSWEST2C'
        VpcId: !Ref VPC
    PrivateRouteTableUSWEST2D:
      Type: 'AWS::EC2::RouteTable'
      Properties:
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/PrivateRouteTableUSWEST2D'
        VpcId: !Ref VPC
    PublicRouteTable:
      Type: 'AWS::EC2::RouteTable'
      Properties:
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/PublicRouteTable'
        VpcId: !Ref VPC
    PublicSubnetRoute:
      Type: 'AWS::EC2::Route'
      Properties:
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway
        RouteTableId: !Ref PublicRouteTable
      DependsOn:
        - VPCGatewayAttachment
    RouteTableAssociationPrivateUSWEST2B:
      Type: 'AWS::EC2::SubnetRouteTableAssociation'
      Properties:
        RouteTableId: !Ref PrivateRouteTableUSWEST2B
        SubnetId: !Ref SubnetPrivateUSWEST2B
    RouteTableAssociationPrivateUSWEST2C:
      Type: 'AWS::EC2::SubnetRouteTableAssociation'
      Properties:
        RouteTableId: !Ref PrivateRouteTableUSWEST2C
        SubnetId: !Ref SubnetPrivateUSWEST2C
    RouteTableAssociationPrivateUSWEST2D:
      Type: 'AWS::EC2::SubnetRouteTableAssociation'
      Properties:
        RouteTableId: !Ref PrivateRouteTableUSWEST2D
        SubnetId: !Ref SubnetPrivateUSWEST2D
    RouteTableAssociationPublicUSWEST2B:
      Type: 'AWS::EC2::SubnetRouteTableAssociation'
      Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref SubnetPublicUSWEST2B
    RouteTableAssociationPublicUSWEST2C:
      Type: 'AWS::EC2::SubnetRouteTableAssociation'
      Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref SubnetPublicUSWEST2C
    RouteTableAssociationPublicUSWEST2D:
      Type: 'AWS::EC2::SubnetRouteTableAssociation'
      Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref SubnetPublicUSWEST2D
    ServiceRole:
      Type: 'AWS::IAM::Role'
      Properties:
        AssumeRolePolicyDocument:
          Statement:
            - Action:
                - 'sts:AssumeRole'
              Effect: Allow
              Principal:
                Service:
                  - !FindInMap
                    - ServicePrincipalPartitionMap
                    - !Ref 'AWS::Partition'
                    - EKS
                  - !FindInMap
                    - ServicePrincipalPartitionMap
                    - !Ref 'AWS::Partition'
                    - EKSFargatePods
          Version: 2012-10-17
        ManagedPolicyArns:
          - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEKSClusterPolicy'
          - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonEKSVPCResourceController'
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/ServiceRole'
    SubnetPrivateUSWEST2B:
      Type: 'AWS::EC2::Subnet'
      Properties:
        AvailabilityZone: us-west-2b
        CidrBlock: 192.168.128.0/19
        Tags:
          - Key: kubernetes.io/role/internal-elb
            Value: '1'
          - Key: Name
            Value: !Sub '${AWS::StackName}/SubnetPrivateUSWEST2B'
        VpcId: !Ref VPC
    SubnetPrivateUSWEST2C:
      Type: 'AWS::EC2::Subnet'
      Properties:
        AvailabilityZone: us-west-2c
        CidrBlock: 192.168.160.0/19
        Tags:
          - Key: kubernetes.io/role/internal-elb
            Value: '1'
          - Key: Name
            Value: !Sub '${AWS::StackName}/SubnetPrivateUSWEST2C'
        VpcId: !Ref VPC
    SubnetPrivateUSWEST2D:
      Type: 'AWS::EC2::Subnet'
      Properties:
        AvailabilityZone: us-west-2d
        CidrBlock: 192.168.96.0/19
        Tags:
          - Key: kubernetes.io/role/internal-elb
            Value: '1'
          - Key: Name
            Value: !Sub '${AWS::StackName}/SubnetPrivateUSWEST2D'
        VpcId: !Ref VPC
    SubnetPublicUSWEST2B:
      Type: 'AWS::EC2::Subnet'
      Properties:
        AvailabilityZone: us-west-2b
        CidrBlock: 192.168.32.0/19
        MapPublicIpOnLaunch: true
        Tags:
          - Key: kubernetes.io/role/elb
            Value: '1'
          - Key: Name
            Value: !Sub '${AWS::StackName}/SubnetPublicUSWEST2B'
        VpcId: !Ref VPC
    SubnetPublicUSWEST2C:
      Type: 'AWS::EC2::Subnet'
      Properties:
        AvailabilityZone: us-west-2c
        CidrBlock: 192.168.64.0/19
        MapPublicIpOnLaunch: true
        Tags:
          - Key: kubernetes.io/role/elb
            Value: '1'
          - Key: Name
            Value: !Sub '${AWS::StackName}/SubnetPublicUSWEST2C'
        VpcId: !Ref VPC
    SubnetPublicUSWEST2D:
      Type: 'AWS::EC2::Subnet'
      Properties:
        AvailabilityZone: us-west-2d
        CidrBlock: 192.168.0.0/19
        MapPublicIpOnLaunch: true
        Tags:
          - Key: kubernetes.io/role/elb
            Value: '1'
          - Key: Name
            Value: !Sub '${AWS::StackName}/SubnetPublicUSWEST2D'
        VpcId: !Ref VPC
    VPC:
      Type: 'AWS::EC2::VPC'
      Properties:
        CidrBlock: 192.168.0.0/16
        EnableDnsHostnames: true
        EnableDnsSupport: true
        Tags:
          - Key: Name
            Value: !Sub '${AWS::StackName}/VPC'
    VPCGatewayAttachment:
      Type: 'AWS::EC2::VPCGatewayAttachment'
      Properties:
        InternetGatewayId: !Ref InternetGateway
        VpcId: !Ref VPC
  Outputs:
    ARN:
      Value: !GetAtt
        - ControlPlane
        - Arn
      Export:
        Name: !Sub '${AWS::StackName}::ARN'
    CertificateAuthorityData:
      Value: !GetAtt
        - ControlPlane
        - CertificateAuthorityData
    ClusterSecurityGroupId:
      Value: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      Export:
        Name: !Sub '${AWS::StackName}::ClusterSecurityGroupId'
    ClusterStackName:
      Value: !Ref 'AWS::StackName'
    Endpoint:
      Value: !GetAtt
        - ControlPlane
        - Endpoint
      Export:
        Name: !Sub '${AWS::StackName}::Endpoint'
    FeatureNATMode:
      Value: Single
    SecurityGroup:
      Value: !Ref ControlPlaneSecurityGroup
      Export:
        Name: !Sub '${AWS::StackName}::SecurityGroup'
    ServiceRoleARN:
      Value: !GetAtt
        - ServiceRole
        - Arn
      Export:
        Name: !Sub '${AWS::StackName}::ServiceRoleARN'
    SharedNodeSecurityGroup:
      Value: !Ref ClusterSharedNodeSecurityGroup
      Export:
        Name: !Sub '${AWS::StackName}::SharedNodeSecurityGroup'
    SubnetsPrivate:
      Value: !Join
        - ','
        - - !Ref SubnetPrivateUSWEST2D
          - !Ref SubnetPrivateUSWEST2B
          - !Ref SubnetPrivateUSWEST2C
      Export:
        Name: !Sub '${AWS::StackName}::SubnetsPrivate'
    SubnetsPublic:
      Value: !Join
        - ','
        - - !Ref SubnetPublicUSWEST2D
          - !Ref SubnetPublicUSWEST2B
          - !Ref SubnetPublicUSWEST2C
      Export:
        Name: !Sub '${AWS::StackName}::SubnetsPublic'
    VPC:
      Value: !Ref VPC
      Export:
        Name: !Sub '${AWS::StackName}::VPC'
StagesAvailable:
  - Original
  - Processed
